--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin:0;
     padding:0;
 }
+
+body{background: grey url(./wall.jpg) no-repeat center center; }
+main{text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh; }
 #insertDiv>div>kbd{
     /* border:1px solid red; */
     height: 40px;
@@ -15,6 +18,7 @@
     right: 0;
     bottom: 0;
     display:none;
+    
 }
 #insertDiv>div>kbd:hover>button{
     display:inline-block;
@@ -23,11 +27,46 @@
     margin-left:-12px;
 }
 #insertDiv>div:nth-child(3){
-    margin-left:-30px;
+    margin-left:-65px;
 }
 #insertDiv{
     display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 main{
     text-align: center;
 }
+.wrapper{
+	background: rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+}
+
+
+.key{
+    display: inline-block;
+    vertical-align: center;
+    color: #C5C5C5;
+    font-family: "Helvetica";
+    border:1px solid #373737;
+    border-radius: 8px;
+    font-size: 20px;
+    box-shadow: 0 0 0 1px #1A1B1C,0 0 0 1px #1F2020, 0 3px 0 2px #080808;
+    background: linear-gradient(180deg, rgba(41,41,41,1) 0%, rgba(17,17,17,1) 100%);
+    position: relative;
+    margin: 15px; 
+}
+/* .warper>.row{
+    margin:15px 20px;
+} */
+
+
+.key img{
+    width: 16px; 
+    height: 16px; 
+    position: absolute; 
+    left: 4px; 
+    bottom: 2px;
+}
+
+.key .text{position: absolute; left: 4px; top: 2px; }
